# rustapp-example

./: .env  Cargo.toml  README.md  rust-toolchain
.github/workflows/: rust.yml
debil/: Cargo.toml
debil/debil-derive/src/: lib.rs
debil/src/: lib.rs  mysql.rs
debil/tests/: lib.rs
key/: ec384.pem  secp384r1.key  secp384r1.pem  secp384r1.priv.key
migrations/2019-10-10-180610_create_users/: up.sql
migrations/2019-10-12-065746_create_user_record/: down.sql  up.sql
migrations/2019-10-12-071933_user_record_non_null/: up.sql
migrations/2019-10-12-075947_add_user_login_record/: down.sql  up.sql
migrations/2019-10-12-082740_add_user_role/: down.sql  up.sql
migrations/2019-10-12-094110_rename_to_user_login_records/: down.sql  up.sql
src/: async_await.rs  error.rs  infra.rs  initializer.rs  main.rs  models.rs  schema.rs  serviceclient.rs  web.rs
src/domain/: interface.rs  model.rs  service.rs
src/domain/model/: login.rs  user.rs
src/domain/service/: login_service.rs  user_service.rs
src/infra/: connection_pool.rs  db_executor.rs  hash_manager.rs  jwt_handler.rs
src/serviceclient/: user_login_repo.rs  user_repo.rs
