[package]
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
name = "rustapp-example"
version = "0.1.0"
[dependencies]
actix-web = "1.0.8"
dotenv = "*"
r2d2 = "*"
r2d2_mysql = "16.0.0"
mysql = "16.1.0"
futures01 = { version = "0.1.26" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await", "compat"] }

[dependencies.diesel]
features = ["mysql"]
version = "1.4.2"
